--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,9 @@ body {
   color: var(--foreground);
   margin: 0;
   padding: 0;
+  /* Dodaj to, aby zapobiec poziomemu przesuwaniu się strony na telefonie */
+  overflow-x: hidden; 
+  width: 100%;
 }
 
  /* animacja pinezki */
