--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,8 @@ html, body {
 [id] {
   scroll-margin-top: 100px;
 }
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
